GearsetPOC/force-app/main/default/objects/Case_History__c/Case_History__c.object-meta.xml
<CustomObject>
    <label>Case History</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>