GearsetPOC/force-app/main/default/objects/Case_History__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <formula>Text(Case__r.Origin)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Origin</label>
    <type>Text</type>
</CustomField>