GearsetPOC/force-app/main/default/objects/Case_History__c/fields/Created_Date_For_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_For_Reporting__c</fullName>
    <formula>CreatedDate</formula>
    <label>Created Date (For Reporting)</label>
    <type>Date</type>
</CustomField>