GearsetPOC/force-app/main/default/objects/Case_History__c/fields/Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Time__c</fullName>
    <label>Entry Time</label>
    <type>DateTime</type>
</CustomField>