GearsetPOC/force-app/main/default/objects/Case_History__c/fields/Entry_Time_Hour__c.field-meta.xml
<CustomField>
    <fullName>Entry_Time_Hour__c</fullName>
    <formula>VALUE(MID((TEXT(Entry_Time__c )),12,2))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entry Time Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>