GearsetPOC/force-app/main/default/objects/Case_History__c/fields/Entry_Time_Within_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Entry_Time_Within_Work_Hours__c</fullName>
    <formula>IF( Initiated_Time_of_Day__c &gt; 6 &amp;&amp;  Initiated_Time_of_Day__c &lt;= 20, Entry_Time__c,


IF(Initiated_Time_of_Day_for_Exit__c&gt;= 21 &amp;&amp;  Initiated_Time_of_Day_for_Exit__c&lt;= 24,  Entry_Time__c ,

IF(Initiated_Time_of_Day_for_Exit__c&gt;=0 &amp;&amp;  Initiated_Time_of_Day_for_Exit__c&lt;=5 , Entry_Time__c,


IF( Initiated_Time_of_Day__c &gt;= 21 &amp;&amp;  Initiated_Time_of_Day__c &lt;= 24, DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate+ 1))&amp;&#39; 6:00:00&#39;) ,

IF(Initiated_Time_of_Day__c &gt;=0 &amp;&amp;  Initiated_Time_of_Day__c &lt;=6 , DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate))&amp;&#39; 6:00:00&#39;), null )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entry Time Within Work Hours</label>
    <type>DateTime</type>
</CustomField>