GearsetPOC/force-app/main/default/objects/Case_History__c/fields/Initiated_Time_of_Day_for_Exit__c.field-meta.xml
<CustomField>
    <fullName>Initiated_Time_of_Day_for_Exit__c</fullName>
    <formula>VALUE(MID(TEXT(Exit_Time__c), 12,2))+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initiated Time of Day for Exit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>