GearsetPOC/force-app/main/default/objects/Case_History__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <formula>If(
BEGINS(OwnerId, &quot;005&quot;)
,Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName
,Owner:Queue.QueueName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>