GearsetPOC/force-app/main/default/objects/Case_History__c/fields/Social_Persona__c.field-meta.xml
<CustomField>
    <fullName>Social_Persona__c</fullName>
    <formula>Case__r.Social_Persona__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Social Persona</label>
    <type>Text</type>
</CustomField>