GearsetPOC/force-app/main/default/objects/Case_History__c/listViews/Social_Media_Case_History.listView-meta.xml
<ListView>
    <fullName>Social_Media_Case_History</fullName>
    <filterScope>Queue</filterScope>
    <label>Social Media</label>
    <queue>Social_Media</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>