GearsetPOC/force-app/main/default/objects/Case_History__c/listViews/Social_Media_High_Priority_Case_History.listView-meta.xml
<ListView>
    <fullName>Social_Media_High_Priority_Case_History</fullName>
    <filterScope>Queue</filterScope>
    <label>Social Media (High Priority)</label>
    <queue>Social_Media_High_Priority</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>